2008-01-17  Alexander Larsson  <alexl@redhat.com>

        * common/gvfsdaemonprotocol.h:
        * client/gdaemonfile.c:
	Add upload operation (requires latest glib)
	
        * daemon/gvfsbackend.[ch]:
        * daemon/gvfsjobupload.[ch]: Added.
	Implement upload in daemon
	
        * daemon/Makefile.am:
        * daemon/burn.mount.in: Added.
        * daemon/gvfsbackendburn.[ch]: Added.
	Added initial burn:/// implementation.
	Not fully implemented, but read works.
	
        * daemon/gvfsbackendcomputer.c:
	Ensure we set right mimetype for dirs

2008-01-16  Christian Kellner  <gicmo@gnome.org>

	* daemon/gvfsbackenddav.c:	
	* daemon/gvfsbackendhttp.c:
	* daemon/gvfsbackendhttp.h:
	A few cleanups.

2008-01-16  Christian Kellner  <gicmo@gnome.org>

	* daemon/gvfsbackenddav.c: 
	* daemon/gvfsbackendhttp.c:
	* daemon/gvfsbackendhttp.h:
	* daemon/soup-input-stream.c:
	* daemon/soup-output-stream.c:
	Port to libsoup-2.4.

	* configure.ac:
	* daemon/Makefile.am:
	Make building of http optional (and depend on wether
	libsoup is found or not)
	Patch from Dan Winship.

2008-01-16  Frederic Crozat  <fcrozat@mandriva.com>

	* Makefile.am: Only build hal module when hal support is
	enabled (#509693).

2008-01-15  Alexander Larsson  <alexl@redhat.com>

        * client/gdaemonfile.c:
        * daemon/daemon-main.c:
        * daemon/gvfsbackendcdda.c:
        * daemon/gvfsbackendcomputer.c:
        * daemon/gvfsbackendftp.c:
        * daemon/gvfsbackendlocaltest.c:
        * daemon/gvfsbackendsftp.c:
        * daemon/gvfsbackendsmb.c:
        * daemon/gvfsbackendsmbbrowse.c:
        * daemon/gvfsbackendtrash.c:
        * daemon/gvfsjobsetattribute.c:
        * hal/ghaldrive.c:
	Clean up strings and add translator comments

2008-01-15  Alexander Larsson  <alexl@redhat.com>

        * daemon/gvfsbackendcomputer.c:
        (recompute_files):
	Fix crash (#508236)
	Patch from Joe Marcus Clarke

2008-01-15  David Zeuthen  <davidz@redhat.com>
